
        * ACEXML/common/XML_Macros.h:

          Include the above file and get rid of redundant and broken
          checking for exceptions.

        * ace/CORBA_macros.h:

          Moved over the stuff from Exception_Macros.h to where it was
          originally. This should fix all the build breakage. Thanks to
          Bala for pointing out the errors in the build.


Sun Oct 13 15:57:04 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/Asynch_IO.cpp:
	* ace/Asynch_IO.h: Protected  ACE_Asynch_Read_File::readv () and
	  ACE_Asynch_Write_File::writev () from being called when
	  ACE_HAS_WINNT4 == 0.
	* ace/WIN32_Asynch_IO.cpp:
	* ace/WIN32_Asynch_IO.h: Protected
	  ACE_WIN32_Asynch_Read_File::readv () and
	  ACE_WIN32_Asynch_Write_File::writev () from being called when
	  ACE_HAS_WINNT4 == 0.

	  Thanks to Eric Frias <efrias@syncad.com> for reporting the
	  problem and Alex Libman for suggesting the fix.

	* THANKS: Added Eric Frias <efrias@syncad.com> to the hall of
	  fame.

Sun Oct 13 15:54:59 2002  Krishnakumar B  <kitty@cse.wustl.edu>

        * ACEXML/apps/svcconf/Svcconf_Handler.cpp: Fixed a couple of
          warnings related to the exception argument handling.

Sun Oct 13 00:55:27 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/common/XML_Common.dsp:

          Added XML_Macros.h to the project file.

        * ACEXML/examples/SAXPrint/svc.conf.xml:

          Reverted a mistaken change used for testing.

        * ACEXML/apps/svcconf/Svcconf_Handler.cpp:
        * ACEXML/common/SAXExceptions.cpp:
        * ACEXML/parser/debug_validator/Debug_DTD_Manager.cpp:

          Added ACE_TEXT around strings so that WCHAR build is happy.

Sat Oct 12 23:01:29 2002  Krishnakumar B  <kitty@cse.wustl.edu>

        * ACEXML/apps/svcconf/Svcconf.h (ACEXML_Svcconf_Parser): Removed
          the unused member env_.

Sat Oct 12 22:50:02 2002  Krishnakumar B  <kitty@cse.wustl.edu>

        * ACEXML/common/XML_Macros.h:
