@@ -317,7 +317,7 @@ John Lindal <jafl@cheshire-cat.caltech.edu>
 Dustin Laurence <laurence@alice.wonderland.caltech.edu>
 Ernie Makris <emakris@ziplink.net>
 Timothy A. Brown <tabrown@montana.com>
-Patrick J. McNerthney <pat@cartia.com>
+Pat McNerthney <ace@mcnerthney.com>
 Lori Anderson <lori@probita.com>
 Erik Margraf <erik@asgard.gud.siemens.co.at>
 Bryan Doerr <Bryan.S.Doerr@boeing.com>
@@ -1586,6 +1586,7 @@ Erich Hochmuth <erich_hochmuth@hotmail.com>
 Nick S. Petrov <nicksp@ci.nnov.ru>
 Dmitry Botcharnikov <dimab@garant.ru>
 Philippe Haussy <p.haussy@xpedite.com>
+k2@biogate.com
 Eric Frias <efrias@syncad.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
