@@ -24,8 +24,9 @@
 /**
  * @class ACE_SPIPE_Connector
  *
- * @brief Defines an active connection factory for the STREAM pipe
- * wrappers.
+ * @brief Defines an active connection factory for <ACE_SPIPE_Stream>.
+ * On Windows this is mapped to Named Pipes, whereas on UNIX it is
+ * mapped to STREAM pipes.  
  */
 class ACE_Export ACE_SPIPE_Connector
 {
